# forecr_xavier_kernel

./: .gitignore  BUILD_INSTRUCTIONS  EXPORTING_BINS  Makefile  README.md  dsboard-v2_Interface-Tests_forNx.txt  environment_nvidia  generic_rt_build.sh  kernel_src_build_env.sh  nvbuild.sh  nvcommon_build.sh
hwpm/: BUILD.bazel
hwpm/drivers/: Kconfig  Makefile
hwpm/drivers/tegra/hwpm/: BUILD.bazel  Kconfig  Makefile  Makefile.common.sources  Makefile.hwpm.sources  Makefile.linux.sources  Makefile.sources  Makefile.t234.sources  Makefile.t264.sources  Makefile.th500.soc.sources  Makefile.th500.sources  tegra_hwpm_mock.c
hwpm/include/uapi/linux/: tegra-soc-hwpm-uapi.h
hwpm/libnvsochwpm/: Makefile  Makefile.umbrella.tmk  nv_soc_hwpm.c
hwpm/libnvsochwpm/common/: bit.h  log.c  log.h  register_util.h  types.h
hwpm/libnvsochwpm/include/: nv_soc_hwpm.h  nv_soc_hwpm_loader.hpp
hwpm/libnvsochwpm/os/: nv_soc_hwpm_os.h
hwpm/libnvsochwpm/os/lnx/: libnvsochwpm.export  libnvsochwpm.map  nv_soc_hwpm_lnx.c
hwpm/libnvsochwpm/test/: Makefile  hwpm_record_format.h  ip_names.h  nv_soc_hwpm_test.cpp  nv_soc_hwpm_test.h  soc_mode_e_buffer.cpp  soc_mode_e_buffer.h  t241_test.cpp  t241_test.h  t410_test.cpp  t410_test.h
kernel-devicetree/: BUILD.bazel  OWNERS
kernel-devicetree/generic-dts/: Makefile
kernel-devicetree/legacy-dts/: Makefile
kernel-devicetree/scripts/: Makefile.build
nvgpu/drivers/gpu/nvgpu/: Makefile  (+6 more)
nvidia-oot/: .nspect-allowlist.toml  BUILD.bazel  Makefile  Makefile-dkms  Makefile.kleaf  Makefile.yocto  dkms.conf
nvidia-oot/configs/: Makefile.config.embedded-linux  Makefile.config.fuzzing  Makefile.config.l4t  Makefile.config.noble  Makefile.config.nvmainline  Makefile.config.oot  Makefile.config.rhivos-1
nvidia-oot/drivers/: Makefile
nvidia-oot/drivers/bmi088/: Makefile  bmi088_core.c  bmi088_iio.c  bmi_iio.h
nvidia-oot/drivers/bus/: Makefile  tegra-aocluster.c
nvidia-oot/drivers/c2c/: Makefile
nvidia-oot/drivers/clink/: Makefile
nvidia-oot/drivers/cpuidle/: Makefile  cpuidle-dbg-core.c  cpuidle-dbg-fs.c  cpuidle-debugfs.c  cpuidle-priv.h  cpuidle-tegra-auto.c
nvidia-oot/drivers/crypto/: Makefile  tegra-hv-vse-safety.c  tegra-hv-vse.h  tegra-nvvse-cryptodev.c  tegra-se-nvrng.c
nvidia-oot/drivers/devfreq/: Makefile  governor_pod_scaling.c  tegra_wmark.c
nvidia-oot/drivers/gpio/: Makefile  gpio-max77851.c
nvidia-oot/drivers/gpu/: Makefile
nvidia-oot/drivers/hid/: Makefile  hid-atv-jarvis.c  hid-atv-jarvis.h  hid-ids.h  sbcdec.c  sbcdec.h
nvidia-oot/drivers/hwmon/: Makefile  f75308.c  ina232.c
nvidia-oot/drivers/ivc_sample_server/: Makefile  tegra_hv_sysfs_sample_server.c
nvidia-oot/drivers/media/: Makefile
nvidia-oot/drivers/memory/: Makefile
nvidia-oot/drivers/mfd/: Makefile  max77851.c  nvidia-vrs-pseq.c
nvidia-oot/drivers/misc/: Makefile  bluedroid_pm.c  bluedroid_pm.h  ioctl_example.c  tegra-pcie-dma-test.c
nvidia-oot/drivers/net/: Makefile  nv_vsock_transport.c  tegra_hv_net.c
nvidia-oot/drivers/nv-p2p/: Makefile  nvidia-p2p.c
nvidia-oot/drivers/nv-virtio/: Makefile  nv-virtio-console-poc.c
nvidia-oot/drivers/nvpmodel/: Makefile  nvpmodel-clk-cap.c
nvidia-oot/drivers/nvpps/: Makefile  nvpps_common.h  nvpps_main.c  nvpps_platforms.h  nvpps_t23x.c  nvpps_t23x.h  nvpps_t26x.c  nvpps_t26x.h  ptp-notifier.c
nvidia-oot/drivers/nvtzvault/: Makefile  nvtzvault-common.h  nvtzvault-helper.c  nvtzvault-helper.h  nvtzvault-main.c  oesp-mailbox.c  oesp-mailbox.h  teec-soc-ivc.c  teec-soc-ivc.h  teec-soc-mailbox.c  teec-soc-mailbox.h  teec-soc-plugin-os.h  teec-soc-plugin.c  teec-soc-plugin.h
nvidia-oot/drivers/pci/: Makefile
nvidia-oot/drivers/pinctrl/: Makefile  core.h  pinctrl-max77851.c  pinctrl-tegra194-pexclk-padctrl.c  pinctrl-tegra234-dpaux.c  pinctrl-utils.h
nvidia-oot/drivers/power/: Makefile
nvidia-oot/drivers/pwm/: Makefile  pwm-tegra-tachometer.c
nvidia-oot/drivers/ras/: Makefile  arm64-ras.c
nvidia-oot/drivers/regulator/: Makefile  max77851-regulator.c
nvidia-oot/drivers/rtc/: Makefile  nvvrs-pseq-rtc.c  rtc-max77851.c
nvidia-oot/drivers/spi/: Makefile  spi-aurix-tegra.c  spi-tegra124-slave.c  spi-tegra210-quad.c
nvidia-oot/drivers/thermal/: Makefile  max77851_thermal.c  pex9749-thermal.c  tegra234-oc-event.c  thermal-trip-event.c
nvidia-oot/drivers/tty/: Makefile
nvidia-oot/drivers/usb/: Makefile
nvidia-oot/drivers/watchdog/: Makefile  max77851_wdt.c  softdog-platform.c  watchdog-tegra-t18x.c
nvidia-oot/include/: tegra_virt_storage_spec.h
nvidia-oot/include/devfreq/: governor.h
nvidia-oot/include/linux/: arm64-barrier.h  arm64-ras.h  host1x-next.h  nv-p2p.h  nvhost.h  nvhost_t194.h  nvmap.h  nvmap_t19x.h  nvpps.h  nvs.h  nvscierror.h  nvsciipc_interface.h  pcie_dma.h  tegra-aon.h  tegra-camera-rtcpu.h  tegra-capture-ivc.h  tegra-epl.h  tegra-firmwares.h  tegra-gte.h  tegra-hsp-combo.h  tegra-hsp.h  tegra-ivc-bus.h  tegra-ivc-instance.h  tegra-oot-prod.h  tegra-pcie-dma.h  tegra-pcie-edma-test-common.h  tegra-pcie-edma.h  tegra-prod-legacy-dummy.h  tegra-prod-upstream-dummy.h  tegra-rtcpu-monitor.h  tegra-rtcpu-trace.h  tegra_gr_comm.h  tegra_nvadsp.h  tegra_vnet.h
nvidia-oot/include/media/: camera_common.h  camera_version_utils.h  cdi-dev.h  cdi-mgr.h  csi.h  csi4_registers.h  csi5_registers.h  gmsl-link.h  imx219.h  imx274.h  imx318.h  imx477.h  isc-dev.h  isc-mgr.h  max9295.h  max9296.h  mc_common.h  nv_hawk_owl.h  nvc.h  nvc_focus.h  ov5693.h  sensor_common.h  tegra-v4l2-camera.h  tegra_camera_core.h  tegra_camera_dev_mfi.h  tegra_camera_platform.h  tegra_v4l2_camera.h  tegracam_core.h  tegracam_utils.h  vi.h  vi2_registers.h  vi4_registers.h
nvidia-oot/include/sound/: tegra_nvfx.h  tegra_nvfx_apm.h  tegra_nvfx_plugin.h
nvidia-oot/include/video/: vi4.h
nvidia-oot/scripts/: Makefile.lib
nvidia-oot/scripts/coccinelle/: platform_driver_remove.cocci
nvidia-oot/scripts/conftest/: BUILD.bazel  Makefile  conftest.h  conftest.sh
nvidia-oot/sound/tegra-safety-audio/: Makefile  i2s.c  sound-card.c  tegra_i2s.h  tegra_i2s_regs.h
nvidia-oot/tools/tegra-gte/: tegra_gte_mon.c
(+11747 files in other folders)
