# SPDX-License-Identifier: GPL-2.0-only
# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "devicetree.scripts",
    srcs = glob([
        "scripts/**/*",
    ]),
)

filegroup(
    name = "generic-dts.srcs",
    srcs = glob([
        "generic-dts/**/*",
    ]),
)
